# server-test

./: docker-compose.yml  json-server.tar.zst  readme.md  server_test.postman_collection.json
fastapi-01/: main.py  pyproject.toml  requirements.txt  test.py
fastapi-01/sql_app/: database.py  models.py  schemas.py  service.py
fastapi-01/static/: asset-manifest.json
fastapi-01/static/static/css/: main.09990150.css  main.09990150.css.map
fastapi-01/static/static/js/: 787.7b361671.chunk.js.map  main.31888977.js  main.31888977.js.map  main.d953083e.js  main.d953083e.js.map
frontend-01/: package.json
frontend-01/src/: App.js  fetch.js
nodejs-01/: .env  package.json
nodejs-01/prisma/: schema.prisma
nodejs-01/src/: index.ts
react-for-supabase/: package-lock.json  package.json
react-for-supabase/src/: App.js  fetch.js
spring-01/: build.gradle
spring-01/src/main/java/com/blockki/spring01/: ServletInitializer.java  Spring01Application.java
spring-01/src/main/java/server_test/spring01/: ServletInitializer.java  Spring01Application.java
spring-01/src/main/java/server_test/spring01/config/: WebConfig.java
spring-01/src/main/java/server_test/spring01/controller/: APIcontroller.java
spring-01/src/main/java/server_test/spring01/dto/: InfoRequestDto.java  LengthRequestDto.java  LengthResponseDto.java  MemberRequestDto.java
spring-01/src/main/resources/: application.yml
spring-01/src/main/resources/static/: index.html
spring-01/src/test/java/server_test/spring01/: Spring01ApplicationTests.java
(+22 files in other folders)
