[tool.poetry]
name = "fastapi-server-01"
version = "0.1.0"
description = ""
authors = ["andykim <andy.cskim@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_server_01"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
