[tool.poetry]
name = "fastapi-server-01"
version = "0.1.0"
description = ""
authors = ["andykim <andy.cskim@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_server_01"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.15"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"
fastapi-sso = "^0.6.4"
google-auth = "^2.22.0"
requests = "^2.31.0"
pyjwt = "^2.8.0"
greenlet = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
